--- a/rt.vcxproj.filters
+++ b/rt.vcxproj.filters
@@ -42,9 +42,6 @@
     <ClCompile Include="src\rt\cuda\CudaBVH.cpp">
       <Filter>cuda</Filter>
     </ClCompile>
-    <ClCompile Include="src\rt\cuda\CudaTracer.cpp">
-      <Filter>cuda</Filter>
-    </ClCompile>
     <ClCompile Include="src\rt\cuda\Renderer.cpp">
       <Filter>cuda</Filter>
     </ClCompile>
@@ -69,9 +66,6 @@
     </ClCompile>
     <ClCompile Include="src\rt\cuda\CudaRenderer.cpp">
       <Filter>cuda</Filter>
-    </ClCompile>
-    <ClCompile Include="src\rt\tools\VisualizationBVH.cpp">
-      <Filter>tools</Filter>
     </ClCompile>
     <ClCompile Include="src\rt\kdtree\FastKDTreeBuilder.cpp">
       <Filter>kdtree</Filter>
@@ -100,6 +94,19 @@
     <ClCompile Include="src\rt\cuda\CudaKDTreeTracer.cpp">
       <Filter>cuda</Filter>
     </ClCompile>
+    <ClCompile Include="src\rt\cuda\CudaBVHTracer.cpp">
+      <Filter>cuda</Filter>
+    </ClCompile>
+    <ClCompile Include="src\rt\tools\VisualizationKDTree.cpp">
+      <Filter>tools</Filter>
+    </ClCompile>
+    <ClCompile Include="src\rt\tools\VisualizationBVH.cpp">
+      <Filter>tools</Filter>
+    </ClCompile>
+    <ClCompile Include="src\rt\tools\Visualization.cpp">
+      <Filter>tools</Filter>
+    </ClCompile>
+    <ClCompile Include="src\rt\AppEnvironment.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\rt\bvh\BVH.hpp">
@@ -115,9 +122,6 @@
       <Filter>bvh</Filter>
     </ClInclude>
     <ClInclude Include="src\rt\cuda\CudaBVH.hpp">
-      <Filter>cuda</Filter>
-    </ClInclude>
-    <ClInclude Include="src\rt\cuda\CudaTracer.hpp">
       <Filter>cuda</Filter>
     </ClInclude>
     <ClInclude Include="src\rt\cuda\Renderer.hpp">
@@ -157,9 +161,6 @@
     <ClInclude Include="src\rt\cuda\CudaRenderer.hpp">
       <Filter>cuda</Filter>
     </ClInclude>
-    <ClInclude Include="src\rt\tools\VisualizationBVH.hpp">
-      <Filter>tools</Filter>
-    </ClInclude>
     <ClInclude Include="src\rt\kdtree\FastKDTreeBuilder.hpp">
       <Filter>kdtree</Filter>
     </ClInclude>
@@ -193,6 +194,19 @@
     <ClInclude Include="src\rt\cuda\CudaVirtualTracer.hpp">
       <Filter>cuda</Filter>
     </ClInclude>
+    <ClInclude Include="src\rt\cuda\CudaBVHTracer.hpp">
+      <Filter>cuda</Filter>
+    </ClInclude>
+    <ClInclude Include="src\rt\tools\VisualizationKDTree.hpp">
+      <Filter>tools</Filter>
+    </ClInclude>
+    <ClInclude Include="src\rt\tools\Visualization.hpp">
+      <Filter>tools</Filter>
+    </ClInclude>
+    <ClInclude Include="src\rt\tools\VisualizationBVH.hpp">
+      <Filter>tools</Filter>
+    </ClInclude>
+    <ClInclude Include="src\rt\AppEnvironment.h" />
   </ItemGroup>
   <ItemGroup>
     <CustomBuildStep Include="src\rt\cuda\RendererKernels.cu">
@@ -220,18 +234,6 @@
   <ItemGroup>
     <None Include="src\rt\kernels\kepler_dynamic_fetch.cu">
       <Filter>kernels</Filter>
-    </None>
-    <None Include="src\rt\bvh\HLBVH\emitTreeKernel.cu">
-      <Filter>bvh\HLBVH</Filter>
-    </None>
-    <None Include="src\rt\bvh\HLBVH\emitTreeKernel.cuh">
-      <Filter>bvh\HLBVH</Filter>
-    </None>
-    <None Include="src\rt\bvh\HLBVH\emitTreeKernel.cuh.bak">
-      <Filter>bvh\HLBVH</Filter>
-    </None>
-    <None Include="src\rt\bvh\HLBVH\radixSort.cu">
-      <Filter>bvh\HLBVH</Filter>
     </None>
   </ItemGroup>
 </Project>
