Adding otracer kernel - aka single-stage kernel that produces directly the output. This is a baseline for megakernel renderers (path tracer, bidirectional path tracer, etc.).
As for now, it works only for BVHs, KD-Tree rendering is unsupported! TBAL.
﻿

--- a/cuda.vcxproj.filters
+++ b/cuda.vcxproj.filters
@@ -48,6 +48,9 @@
     <CudaCompile Include="src\rt\cuda\RendererKernels.cu">
       <Filter>shading</Filter>
     </CudaCompile>
+    <CudaCompile Include="src\rt\kernels\otracer_basic.cu">
+      <Filter>traversal</Filter>
+    </CudaCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="traversal">
