--- a/config.conf
+++ b/config.conf
@@ -1,3 +1,4 @@
+# Acceleration structures currently supported = [BVH, KDTree]
 AccelerationStructure BVH
-# SplitBVH, SAHBVH, OcclusionBVH, HLBVH
-BVHBuilder HLBVH
+# BVH construction currently supported = [SplitBVH, SAHBVH, OcclusionBVH, HLBVH]
+BVHBuilder SplitBVH
