--- a/cuda.vcxproj.filters
+++ b/cuda.vcxproj.filters
@@ -51,6 +51,9 @@
     <CudaCompile Include="src\rt\kernels\otracer_basic.cu">
       <Filter>traversal</Filter>
     </CudaCompile>
+    <CudaCompile Include="src\rt\kernels\otracer_shading.cu">
+      <Filter>traversal</Filter>
+    </CudaCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="traversal">
